--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 /*google icons cdn link*/
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css");
+
 /*tailwind css url*/
 @import "tailwindcss";
 
