--- a/src/App.css
+++ b/src/App.css
@@ -17,5 +17,7 @@
   --color-blue-200: #8094ad;
   --color-blue-500: #19406a;
   --color-blue-700: #002b5b;
+  --color-blue-750: #003d82;
   --color-green-400: #36c6c0;
+  --color-green-450: #2da39d;
 }
